[tool.poetry]
name = "enterprise-gateway"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pillow = "^10.1.0"
pyarrow = "^16.0.0"
google-api-python-client = "^2.111.0"
ipytest = "^0.14.2"
matplotlib = "^3.8.3"
numpy = "^1.26.2"
pandas = "^2.1.4"
pypdf = "^3.17.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
